--- a/parent3.html
+++ b/parent3.html
@@ -54,6 +54,11 @@ const status     = document.getElementById("status");
 
 let results = [];
 let avgMap = {};
+  let overallInsight = "";
+let strengthsMap = {};
+let needsMap = {};
+let supportFlag = "";
+
 
 function levelToScore(level){
  if(level==="Below Expectations") return 1;
@@ -63,6 +68,46 @@ function levelToScore(level){
  return 0;
 }
 
+
+
+function generateInsight(subjects){
+  let total = 0, count = 0;
+  Object.values(subjects).forEach(rows=>{
+    rows.forEach(r=>{
+      const s = levelToScore(r.achievement_level);
+      if(s>0){ total+=s; count++; }
+    });
+  });
+
+  if(!count) return "";
+  const avg = total/count;
+
+  if(avg>=3.5) return "Overall learner is exceeding expectations.";
+  if(avg>=2.5) return "Overall learner is meeting expectations.";
+  if(avg>=1.5) return "Overall learner is approaching expectations.";
+  return "Overall learner is below expectations and needs support.";
+}
+
+function generateStrengthsAndNeeds(subjects){
+  let strengths=[], needs=[];
+  Object.entries(subjects).forEach(([subject,rows])=>{
+    const scores = rows.map(r=>levelToScore(r.achievement_level)).filter(s=>s>0);
+    if(!scores.length) return;
+    const avg = scores.reduce((a,b)=>a+b,0)/scores.length;
+
+    if(avg>=3.5) strengths.push(subject);
+    if(avg<2.5) needs.push(subject);
+  });
+  return {strengths, needs};
+}
+
+function generateSupportFlag(strengths, needs){
+  if(needs.length>=2) return "🔴 Needs Learning Support";
+  if(strengths.length>=2) return "🟢 High Potential";
+  return "🟡 On Track";
+}
+
+  
 /* LOAD TERMS */
 const { data: terms } = await supabase.from("terms").select("id,name").order("name");
 termSelect.innerHTML = `<option value="">Select term</option>` +
@@ -133,33 +178,129 @@ function buildAverages(){
  });
 }
 
+const student = Object.keys(avgMap)[0];
+const subjects = {};
+
+results.forEach(r=>{
+  subjects[r.subject] ??= [];
+  subjects[r.subject].push(r);
+});
+
+overallInsight = generateInsight(subjects);
+const sn = generateStrengthsAndNeeds(subjects);
+strengthsMap = sn.strengths;
+needsMap = sn.needs;
+supportFlag = generateSupportFlag(strengthsMap, needsMap);
+
+
+
+
+  
 /* RENDER */
-function renderReport(){
- const student = `${results[0].first_name} ${results[0].last_name}`;
- let html = `<div class="a4-page"><h3>${student} (Adm ${results[0].admission_number})</h3>`;
 
- Object.entries(avgMap[student]).forEach(([subject,d])=>{
-  const rows = results.filter(r=>r.subject===subject);
-  html+=`
-  <div class="subject-block">
-   <h4>${subject}</h4>
-   <table>
-    <tr><th>Competency</th><th>Level</th></tr>
-    ${rows.map(r=>`
-     <tr><td>${r.competency}</td><td>${r.achievement_level}</td></tr>
-    `).join("")}
-    <tr style="font-weight:bold">
-     <td>AVERAGE</td>
-     <td>${d.average_score.toFixed(2)} — ${d.level}</td>
-    </tr>
-   </table>
+function renderReport() {
+  if (!results.length) return;
+
+  const student = `${results[0].first_name} ${results[0].last_name}`;
+  const adm = results[0].admission_number;
+  const className = results[0].class_name || "—";
+  const schoolName = results[0].school_name || "—";
+  const term = termSelect.value || "—";
+  const year = yearInput.value || "—";
+
+  // Prepare subjects object
+  const subjects = {};
+  results.forEach(r => {
+    subjects[r.subject] ??= [];
+    subjects[r.subject].push(r);
+  });
+
+  // Insights and recommendations
+  overallInsight = generateInsight(subjects);
+  const sn = generateStrengthsAndNeeds(subjects);
+  strengthsMap = sn.strengths;
+  needsMap = sn.needs;
+  supportFlag = generateSupportFlag(strengthsMap, needsMap);
+
+  // Teacher / Parent / Learner recommendations
+  const recommendations = {
+    teacher: needsMap.length ? needsMap.map(s => `Provide remediation in ${s}`) : [],
+    parent: needsMap.length ? needsMap.map(s => `Practice ${s} at home`) : [],
+    learner: needsMap.length ? needsMap.map(s => `Revise ${s}`) : []
+  };
+
+  let html = `<div class="a4-page learner-page">
+    <div class="learner-card">
+
+      <!-- SCHOOL & TERM HEADER -->
+      <div class="report-overview no-split">
+        <h3>${schoolName}</h3>
+        <div class="learner-meta">
+          <strong>Class:</strong> ${className} &nbsp; | &nbsp;
+          <strong>Term:</strong> ${term} – ${year}
+        </div>
+      </div>
+
+      <!-- STUDENT HEADER -->
+      <div class="learner-header">
+        <h4>👤 ${student} <small>(Adm: ${adm})</small></h4>
+        <div style="font-weight:bold;">${supportFlag}</div>
+      </div>
+
+      <!-- OVERALL INSIGHT -->
+      <div class="split-block" style="margin-bottom:10px;">
+        ${overallInsight ? `<p><strong>📋 Insight:</strong> ${overallInsight}</p>` : ""}
+        ${strengthsMap.length ? `<p><strong>💪 Strengths:</strong> ${strengthsMap.join(", ")}</p>` : ""}
+        ${needsMap.length ? `<p><strong>🎯 Areas for Improvement:</strong> ${needsMap.join(", ")}</p>` : ""}
+      </div>
+
+      <!-- RECOMMENDATIONS -->
+      ${recommendations.teacher.length ? `
+        <div class="summary-box" style="border-left:4px solid #3498db;background:#f3f6fa;">
+          <strong>👩🏽‍🏫 Teacher Actions</strong>
+          <ul>${recommendations.teacher.map(r => `<li>${r}</li>`).join("")}</ul>
+        </div>` : ""}
+      ${recommendations.parent.length ? `
+        <div class="summary-box" style="border-left:4px solid #f39c12;background:#fffaf3;">
+          <strong>🏠 Parent Support</strong>
+          <ul>${recommendations.parent.map(r => `<li>${r}</li>`).join("")}</ul>
+        </div>` : ""}
+      ${recommendations.learner.length ? `
+        <div class="summary-box" style="border-left:4px solid #2ecc71;background:#f6fffa;">
+          <strong>🎯 Learner Focus</strong>
+          <ul>${recommendations.learner.map(r => `<li>${r}</li>`).join("")}</ul>
+        </div>` : ""}
+
+      <!-- SUBJECT TABLES -->
+      ${Object.entries(avgMap[student] || {}).map(([subject, d]) => {
+        const rows = results.filter(r => r.subject === subject);
+        return `
+        <div class="subject-block">
+          <h4>${subject}</h4>
+          <table>
+            <thead>
+              <tr><th>Competency</th><th>Level</th></tr>
+            </thead>
+            <tbody>
+              ${rows.map(r => `<tr><td>${r.competency || "—"}</td><td>${r.achievement_level || "—"}</td></tr>`).join("")}
+              <tr style="font-weight:bold">
+                <td>AVERAGE</td>
+                <td>${d.average_score ? d.average_score.toFixed(2) : "N/A"} — ${d.level || "N/A"}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>`;
+      }).join("")}
+
+    </div>
   </div>`;
- });
 
- html+="</div>";
- reportDiv.innerHTML=html;
+  reportDiv.innerHTML = html;
 }
 
+
+
+ 
 /* PDF */
 window.downloadPDF = ()=>{
  if(!reportDiv.innerHTML.trim()) return alert("No report");
